Fix: Alignment on cards on mobile

--- a/src/Components/Card/styles.module.scss
+++ b/src/Components/Card/styles.module.scss
@@ -1,4 +1,4 @@
-@use "./../../variables.module.scss" as vars;
+@use "./../../variables.scss" as vars;
 
 .card {
   background-color: #fff;
@@ -33,20 +33,11 @@
   @media (min-width: vars.$breakpoint-lg) {
     flex: 1 1 calc(50% - 14px);
     max-width: 400px;
-    span:last-of-type {
-      display: none;
-    }
   }
 
   @media (min-width: vars.$breakpoint-xl) {
-    width: auto;
     min-width: auto;
   }
-}
-
-.content {
-  flex: 1 1 0;
-  margin-top: var(--spacing-sm);
 }
 
 .card p,
