--- a/src/Containers/CardWrapper/styles.module.scss
+++ b/src/Containers/CardWrapper/styles.module.scss
@@ -1,4 +1,4 @@
-@use "./../../variables.module.scss" as vars;
+@use "./../../variables.scss" as vars;
 
 .cardWrapper {
   width: 100vw;
@@ -27,5 +27,16 @@
     span:last-of-type {
       display: inline-flex;
     }
+  }
+}
+
+.content {
+  flex: 1 1 0;
+  margin-top: var(--spacing-sm);
+}
+
+footer {
+  @media (min-width: vars.$breakpoint-lg) {
+    display: none;
   }
 }
